--- a/analisys.ipynb
+++ b/analisys.ipynb
@@ -9,7 +9,13 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns"
+    "import seaborn as sns\n",
+    "\n",
+    "import ssl\n",
+    "import urllib.request\n",
+    "\n",
+    "# Deshabilitar la verificación de certificado SSL\n",
+    "ssl._create_default_https_context = ssl._create_unverified_context"
    ]
   },
   {
@@ -57,20 +63,21 @@
     }
    ],
    "source": [
-    "from ucimlrepo import fetch_ucirepo \n",
-    "  \n",
+    "# Importar la biblioteca ucimlrepo\n",
+    "from ucimlrepo import fetch_ucirepo\n",
+    "\n",
     "# fetch dataset \n",
     "heart_disease = fetch_ucirepo(id=45) \n",
     "  \n",
     "# data (as pandas dataframes) \n",
     "X = heart_disease.data.features \n",
     "y = heart_disease.data.targets \n",
-    "  \n",
+    "\n",
     "# metadata \n",
     "print(heart_disease.metadata) \n",
     "  \n",
     "# variable information \n",
-    "print(heart_disease.variables) "
+    "print(heart_disease.variables)"
    ]
   },
   {
@@ -793,7 +800,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.1"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
